force-app/main/default/objects/Plant_Asset__c/Plant_Asset__c.object-meta.xml
<CustomObject>
    <description>All the assets of customers</description>
    <label>Plant Asset</label>
    <nameField>
        <label>Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plant Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>