force-app/main/default/objects/Plant_Asset__c/fields/AC_Capacity__c.field-meta.xml
<CustomField>
    <fullName>AC_Capacity__c</fullName>
    <description>Device AC Capacity</description>
    <inlineHelpText>Device AC Capacity</inlineHelpText>
    <label>Quoted AC Capacity(MW)</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>