force-app/main/default/objects/Plant_Asset__c/fields/AC_UOM__c.field-meta.xml
<CustomField>
    <fullName>AC_UOM__c</fullName>
    <description>AC Capacity Unit of Measure</description>
    <inlineHelpText>AC Capacity Unit of Measure</inlineHelpText>
    <label>AC UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amps</fullName>
            </value>
            <value>
                <fullName>KVA</fullName>
            </value>
            <value>
                <fullName>kW</fullName>
            </value>
            <value>
                <fullName>MW</fullName>
            </value>
            <value>
                <fullName>Volts</fullName>
            </value>
            <value>
                <fullName>Watts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>