force-app/main/default/objects/Plant_Asset__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Plant Assets (Account)</relationshipLabel>
    <relationshipName>Plant_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>