force-app/main/default/objects/Plant_Asset__c/fields/Active_RFI_IB__c.field-meta.xml
<CustomField>
    <fullName>Active_RFI_IB__c</fullName>
    <label>Active RFI IB</label>
    <summaryFilterItems>
        <field>RFI__c.RFI_Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>RFI__c.Implementation_Blocked__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>RFI__c.Plant_Asset__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>