force-app/main/default/objects/Plant_Asset__c/fields/Asset_SubClass__c.field-meta.xml
<CustomField>
    <fullName>Asset_SubClass__c</fullName>
    <label>Renewable Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solar PV</fullName>
            </value>
            <value>
                <fullName>EV</fullName>
            </value>
            <value>
                <fullName>Fossil</fullName>
            </value>
            <value>
                <fullName>Solar Thermal</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>Wind</fullName>
            </value>
            <value>
                <fullName>Hydro</fullName>
            </value>
            <value>
                <fullName>Battery Energy Storage Systems</fullName>
            </value>
            <value>
                <fullName>Fuel Cell</fullName>
            </value>
            <value>
                <fullName>Micro Turbine</fullName>
            </value>
            <value>
                <fullName>Biomass</fullName>
            </value>
            <value>
                <fullName>Automatic Transfer Switch</fullName>
                <isActive>false</isActive>
                <label>Automatic Transfer Switch</label>
            </value>
            <value>
                <fullName>Auxiliary system</fullName>
                <isActive>false</isActive>
                <label>Auxiliary system</label>
            </value>
            <value>
                <fullName>Battery Bank</fullName>
                <isActive>false</isActive>
                <label>Battery Bank</label>
            </value>
            <value>
                <fullName>Block</fullName>
                <isActive>false</isActive>
                <label>Block</label>
            </value>
            <value>
                <fullName>Capacitor Bank</fullName>
                <isActive>false</isActive>
                <label>Capacitor Bank</label>
            </value>
            <value>
                <fullName>Car</fullName>
                <isActive>false</isActive>
                <label>Car</label>
            </value>
            <value>
                <fullName>Circuit</fullName>
                <isActive>false</isActive>
                <label>Circuit</label>
            </value>
            <value>
                <fullName>Circuit Breaker</fullName>
                <isActive>false</isActive>
                <label>Circuit Breaker</label>
            </value>
            <value>
                <fullName>Combiner Box</fullName>
                <isActive>false</isActive>
                <label>Combiner Box</label>
            </value>
            <value>
                <fullName>Computer</fullName>
                <isActive>false</isActive>
                <label>Computer</label>
            </value>
            <value>
                <fullName>DGA</fullName>
                <isActive>false</isActive>
                <label>DGA</label>
            </value>
            <value>
                <fullName>Data Acquisition System</fullName>
                <isActive>false</isActive>
                <label>Data Acquisition System</label>
            </value>
            <value>
                <fullName>Data logger</fullName>
                <isActive>false</isActive>
                <label>Data logger</label>
            </value>
            <value>
                <fullName>Disconnect Switch</fullName>
                <isActive>false</isActive>
                <label>Disconnect Switch</label>
            </value>
            <value>
                <fullName>Electrical Testing</fullName>
                <isActive>false</isActive>
                <label>Electrical Testing</label>
            </value>
            <value>
                <fullName>Fiber Optic</fullName>
                <isActive>false</isActive>
                <label>Fiber Optic</label>
            </value>
            <value>
                <fullName>Firewall</fullName>
                <isActive>false</isActive>
                <label>Firewall</label>
            </value>
            <value>
                <fullName>Freon</fullName>
                <isActive>false</isActive>
                <label>Freon</label>
            </value>
            <value>
                <fullName>Fuse</fullName>
                <isActive>false</isActive>
                <label>Fuse</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>