force-app/main/default/objects/Plant_Asset__c/fields/Commercial_Entity_account__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Entity_account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to the Entity that owns the plant from the Parent Account record</inlineHelpText>
    <label>Commercial Entity Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Plant Assets (Commercial Entity Account)</relationshipLabel>
    <relationshipName>Plant_Asset1</relationshipName>
    <type>Lookup</type>
</CustomField>