force-app/main/default/objects/Plant_Asset__c/fields/Commercial_Operating_Date__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Operating_Date__c</fullName>
    <label>Commercial Operating Date</label>
    <type>Date</type>
</CustomField>