force-app/main/default/objects/Plant_Asset__c/fields/Continent__c.field-meta.xml
<CustomField>
    <fullName>Continent__c</fullName>
    <description>UN M.49</description>
    <inlineHelpText>UN M.49</inlineHelpText>
    <label>Continent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>019 - Americas</fullName>
            </value>
            <value>
                <fullName>002 - Africa</fullName>
            </value>
            <value>
                <fullName>142 - Asia</fullName>
            </value>
            <value>
                <fullName>150 - Europe</fullName>
            </value>
            <value>
                <fullName>009 - Oceania</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>