force-app/main/default/objects/Plant_Asset__c/fields/Count_of_RFI_Record__c.field-meta.xml
<CustomField>
    <fullName>Count_of_RFI_Record__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Count of RFI Record</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>