force-app/main/default/objects/Plant_Asset__c/fields/Customer_Plant_Asset_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Plant_Asset_ID__c</fullName>
    <label>Customer Plant Asset ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>