force-app/main/default/objects/Plant_Asset__c/fields/DAS_SCADA_Provider__c.field-meta.xml
<CustomField>
    <fullName>DAS_SCADA_Provider__c</fullName>
    <label>DAS/SCADA Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABB AuroraVision</fullName>
            </value>
            <value>
                <fullName>ABB Energy Recommerce</fullName>
            </value>
            <value>
                <fullName>ABB FatSpaniel</fullName>
            </value>
            <value>
                <fullName>Also Energy</fullName>
            </value>
            <value>
                <fullName>Cachelan</fullName>
            </value>
            <value>
                <fullName>DECK</fullName>
            </value>
            <value>
                <fullName>Draker</fullName>
            </value>
            <value>
                <fullName>Eguage</fullName>
            </value>
            <value>
                <fullName>Enphase</fullName>
            </value>
            <value>
                <fullName>Fronius</fullName>
            </value>
            <value>
                <fullName>Green Power</fullName>
            </value>
            <value>
                <fullName>Inaccess</fullName>
            </value>
            <value>
                <fullName>Locus Energy</fullName>
            </value>
            <value>
                <fullName>Meteocontrol</fullName>
            </value>
            <value>
                <fullName>MOXA</fullName>
            </value>
            <value>
                <fullName>Obvius</fullName>
            </value>
            <value>
                <fullName>OSI Soft PI</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Red Lion</fullName>
            </value>
            <value>
                <fullName>OPC DA</fullName>
            </value>
            <value>
                <fullName>OPC UA</fullName>
            </value>
            <value>
                <fullName>SEL</fullName>
            </value>
            <value>
                <fullName>Skytron</fullName>
            </value>
            <value>
                <fullName>SMA Sunnyportal</fullName>
            </value>
            <value>
                <fullName>SolarCity</fullName>
            </value>
            <value>
                <fullName>SolarEdge</fullName>
            </value>
            <value>
                <fullName>SolarLog</fullName>
            </value>
            <value>
                <fullName>Solectria SolrenView</fullName>
            </value>
            <value>
                <fullName>SunEdison</fullName>
            </value>
            <value>
                <fullName>Sunpower</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>