force-app/main/default/objects/Plant_Asset__c/fields/DC_Capacity__c.field-meta.xml
<CustomField>
    <fullName>DC_Capacity__c</fullName>
    <description>Device DC Capacity</description>
    <inlineHelpText>Device DC Capacity</inlineHelpText>
    <label>Quoted DC Capacity(MW)</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>