force-app/main/default/objects/Plant_Asset__c/fields/DPSA_DC_Capacity__c.field-meta.xml
<CustomField>
    <fullName>DPSA_DC_Capacity__c</fullName>
    <label>Contracted DC Capacity(MW)</label>
    <precision>11</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>