force-app/main/default/objects/Plant_Asset__c/fields/Full_Plant_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Plant_Name__c</fullName>
    <inlineHelpText>Please enter the full name of the plant here. This field will be used by customers for identifying their assets</inlineHelpText>
    <label>Full Plant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>