force-app/main/default/objects/Plant_Asset__c/fields/IE_Team__c.field-meta.xml
<CustomField>
    <fullName>IE_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IE Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Plant Assets</relationshipLabel>
    <relationshipName>Plant_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>