force-app/main/default/objects/Plant_Asset__c/fields/IE_Team_queue__c.field-meta.xml
<CustomField>
    <fullName>IE_Team_queue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IE Team (queue)</label>
    <referenceTo>cg__SQueue__c</referenceTo>
    <relationshipLabel>Plant Assets</relationshipLabel>
    <relationshipName>Plant_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>