force-app/main/default/objects/Plant_Asset__c/fields/Implementation_Status__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Status__c</fullName>
    <label>Implementation Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Project_Lifecycle_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Customer Submission</fullName>
                <default>true</default>
                <label>Pending Customer Submission</label>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Decommissioned</fullName>
            </value>
            <value>
                <fullName>Pending Full Documentation Submission</fullName>
                <isActive>false</isActive>
                <label>Pending Full Documentation Submission</label>
            </value>
            <value>
                <fullName>Submitted – Pending Customer Review</fullName>
                <isActive>false</isActive>
                <label>Submitted – Pending Customer Review</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>