force-app/main/default/objects/Plant_Asset__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Index</label>
    <type>Checkbox</type>
</CustomField>