force-app/main/default/objects/Plant_Asset__c/fields/Operator_formula__c.field-meta.xml
<CustomField>
    <fullName>Operator_formula__c</fullName>
    <formula>IF( Top_Level__c  = TRUE,TEXT ( Operator__c ), TEXT( Plant__r.Operator__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operator</label>
    <type>Text</type>
</CustomField>