force-app/main/default/objects/Plant_Asset__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Asset</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Plant_Asset__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Parent Asset</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Plant_Asset__c</referenceTo>
    <relationshipLabel>Plant Assets (Child)</relationshipLabel>
    <relationshipName>Plant_Asset</relationshipName>
    <type>Lookup</type>
</CustomField>