force-app/main/default/objects/Plant_Asset__c/fields/PF_Service_Product__c.field-meta.xml
<CustomField>
    <fullName>PF_Service_Product__c</fullName>
    <label>PF Service Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drive</fullName>
            </value>
            <value>
                <fullName>FSM</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Advanced Analytics</fullName>
            </value>
            <value>
                <fullName>Data Pipe</fullName>
            </value>
            <value>
                <fullName>Implementation (Asset Building)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>