force-app/main/default/objects/Plant_Asset__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant</label>
    <referenceTo>Plant_Asset__c</referenceTo>
    <relationshipName>Asset_Tags1</relationshipName>
    <type>Lookup</type>
</CustomField>