force-app/main/default/objects/Plant_Asset__c/fields/Plant_Id__c.field-meta.xml
<CustomField>
    <fullName>Plant_Id__c</fullName>
    <label>Plant Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>