force-app/main/default/objects/Plant_Asset__c/fields/Plant_Name__c.field-meta.xml
<CustomField>
    <fullName>Plant_Name__c</fullName>
    <inlineHelpText>Please enter the minimum required name of the asset. This field will then be concatenated with Customer plant asset ID to arrive at the asset name.</inlineHelpText>
    <label>Plant Name</label>
    <length>70</length>
    <type>Text</type>
</CustomField>