force-app/main/default/objects/Plant_Asset__c/fields/SAT_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>SAT_Approval_Date__c</fullName>
    <label>SAT Approval Date</label>
    <type>Date</type>
</CustomField>