force-app/main/default/objects/Plant_Asset__c/fields/SAT_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>SAT_Submitted_Date__c</fullName>
    <label>SAT Submitted Date</label>
    <type>Date</type>
</CustomField>