force-app/main/default/objects/Plant_Asset__c/fields/Service_Region__c.field-meta.xml
<CustomField>
    <fullName>Service_Region__c</fullName>
    <description>The Service Region provides an ability to organize Asset Tags in a distributed workforce environment. Service Region is copied to the Work Order.</description>
    <inlineHelpText>The Service Region provides an ability to organize Asset Tags in a distributed workforce environment. Service Region is copied to the Work Order.</inlineHelpText>
    <label>Service Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2085-NSW</fullName>
            </value>
            <value>
                <fullName>2085-QLD</fullName>
            </value>
            <value>
                <fullName>2085-SA</fullName>
            </value>
            <value>
                <fullName>2085-VIC</fullName>
            </value>
            <value>
                <fullName>2085-WA</fullName>
            </value>
            <value>
                <fullName>AZ</fullName>
            </value>
            <value>
                <fullName>CA - Central</fullName>
            </value>
            <value>
                <fullName>CA - North</fullName>
            </value>
            <value>
                <fullName>CA - South</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>CO</fullName>
            </value>
            <value>
                <fullName>CT</fullName>
            </value>
            <value>
                <fullName>DG - AZ</fullName>
            </value>
            <value>
                <fullName>DG - CA - Central</fullName>
            </value>
            <value>
                <fullName>DG - CA - North</fullName>
            </value>
            <value>
                <fullName>DG - CA - South</fullName>
            </value>
            <value>
                <fullName>DG - CO</fullName>
            </value>
            <value>
                <fullName>DG - CT</fullName>
            </value>
            <value>
                <fullName>DG - DC</fullName>
            </value>
            <value>
                <fullName>DG - DE</fullName>
            </value>
            <value>
                <fullName>DG - FL</fullName>
            </value>
            <value>
                <fullName>DG - GA</fullName>
            </value>
            <value>
                <fullName>DG - HI</fullName>
            </value>
            <value>
                <fullName>DG - IL</fullName>
            </value>
            <value>
                <fullName>DG - MA</fullName>
            </value>
            <value>
                <fullName>DG - MD</fullName>
            </value>
            <value>
                <fullName>DG - MN</fullName>
            </value>
            <value>
                <fullName>DG - MO</fullName>
            </value>
            <value>
                <fullName>DG - MT</fullName>
            </value>
            <value>
                <fullName>DG - NC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>