force-app/main/default/objects/Plant_Asset__c/fields/Top_Level__c.field-meta.xml
<CustomField>
    <fullName>Top_Level__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Top Level</label>
    <type>Checkbox</type>
</CustomField>