force-app/main/default/objects/Plant_Asset__c/fields/Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Name__c</fullName>
    <description>Used only to make sure Asset ID is unique. Should change Name but it&apos;s managed.</description>
    <inlineHelpText>Used only to make sure Asset ID is unique. Should change Name but it&apos;s managed.</inlineHelpText>
    <label>Unique Name</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>