force-app/main/default/objects/Plant_Asset__c/fields/VPN_Type__c.field-meta.xml
<CustomField>
    <fullName>VPN_Type__c</fullName>
    <label>VPN Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VPN - Client</fullName>
            </value>
            <value>
                <fullName>VPN - Persistent (Tunnel)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>