force-app/main/default/objects/Plant_Asset__c/recordTypes/Child_Asset.recordType-meta.xml
<RecordType>
    <fullName>Child_Asset</fullName>
    <active>true</active>
    <label>Customer Asset</label>
</RecordType>