force-app/main/default/objects/Plant_Asset__c/recordTypes/Parent_Asset.recordType-meta.xml
<RecordType>
    <fullName>Parent_Asset</fullName>
    <active>true</active>
    <label>Parent Asset</label>
</RecordType>