force-app/main/default/objects/Plant_Asset__c/validationRules/AssetNameLimitTo75Chars.validationRule-meta.xml
<ValidationRule>
    <fullName>AssetNameLimitTo75Chars</fullName>
    <active>true</active>
    <description>Plant Name is too long (max 72 characters). Please type in abbreviated name in Plant Name field. Input entire plant name in Full Plant Name field.</description>
    <errorConditionFormula>LEN( Name ) &gt; 72</errorConditionFormula>
    <errorMessage>Plant Name is too long (max 72 characters). Please type in abbreviated name in Plant Name field. Input entire plant name in Full Plant Name field.</errorMessage>
</ValidationRule>