force-app/main/default/objects/Plant_Asset__c/validationRules/Parent_Asset_required_for_Customer_Asset.validationRule-meta.xml
<ValidationRule>
    <fullName>Parent_Asset_required_for_Customer_Asset</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.Name = &quot;Customer Asset&quot;,  ISBLANK( Parent__c )  )</errorConditionFormula>
    <errorMessage>Parent Asset required for Customer Asset Creation</errorMessage>
</ValidationRule>